<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.wishmeal.viewmodel.AppViewModel"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:columnCount="2">

            <TextView
                android:id="@+id/unvisitedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/unvisited"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/visitedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/visited"
                android:textColor="#000000" />

        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:columnCount="5">

            <TextView
                android:id="@+id/allTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/allCuisine"
                android:textColor="@color/yellow"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ukrainianTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ukrainianCuisine"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/europeanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/europeanCuisine"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/americanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/americanCuisine"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/asianTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/asianCuisine"
                android:textColor="#000000"
                android:textSize="12sp" />

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wishes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/addNewWishBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="sans-serif-medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/add_new"
                android:textSize="36sp"
                app:cornerRadius="50dp" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>